--- a/Marami/marami.tex
+++ b/Marami/marami.tex
@@ -42,7 +42,8 @@
 \renewcommand{\text}{\textnormal}
 \newcommand{\ilfm}{\texttt{ILFM}}
 \newcommand{\immsb}{\texttt{IMMSB}}
-\newcommand{\mmm}{\texttt{Mixed-Membership}~}
+\newcommand{\mmm}{\textit{Mixed-Membership}~}
+%\newcommand{\mmm}{\texttt{Mixed-Membership}~}
 \newcommand{\pr}{p}
 \newcommand{\p}{p}
 \newcommand{\E}{\mathbb{E}}
@@ -89,7 +90,7 @@
 
 \abstract{We assess here whether standard stochastic mixed membership models are adapted for link prediction in social networks by studying how they handle homophily and preferential attachment. To study these properties, we first introduce formal definitions of these phenomena; we then study how stochastic mixed membership models relate to these definitions. Our theoretical analysis reveals that standard stochastic mixed membership models comply with homophily with the similarity that underlies them. For preferential attachment, the situation is more contrasted: if these models do not comply with global preferential attachment, their compliance to local preferential attachment depends on whether the memberships to latent factors are hard or soft, and in the latter case on whether the underlying latent factor distribution is bursty or not. We illustrate these elements on synthetic and real networks by using the generative properties of Bayesian model.}
 
-\resume{Nous évaluons dans ce papier si la classe de modèles, dit mixed-membership, est adaptée pour la prédiction de liens dans les réseaux sociaux en étudiant les comportements de ces modèles vis-à-vis de l'homophilie et de l'attachement préférentiel. Nous introduisons les définitions de ces phénomènes, puis analysons le comportement de  ces modèles. Notre étude théorique révèle que les modèles mixed-membership satisfont l'homophilie avec la similarité naturelle qui les sous-tend. Pour l'attachement préférentiel la situation est plus contrastée: ces modèles ne satisfont pas l'attachement préférentiel global. En revanche, le respect de l'attachement préférentiel local est possible selon que l'appartenance aux classes latentes est stricte ou partielle et, dans ce dernier cas si la distribution sur les classes latentes est bursty ou pas. Nous illustrons ces résultats par des expérimentations réalisés sur des réseaux réels et synthétiques.}
+\resume{Nous évaluons dans ce papier si la classe de modèles, dits mixed-membership, est adaptée pour la prédiction de liens dans les réseaux sociaux en étudiant les comportements de ces modèles vis-à-vis de l'homophilie et de l'attachement préférentiel. Nous introduisons les définitions de ces phénomènes, puis analysons le comportement de  ces modèles. Notre étude théorique révèle que les modèles mixed-membership satisfont l'homophilie avec la similarité naturelle qui les sous-tend. Pour l'attachement préférentiel la situation est plus contrastée: ces modèles ne satisfont pas l'attachement préférentiel global. En revanche, le respect de l'attachement préférentiel local est possible selon que l'appartenance aux classes latentes est stricte ou partielle et, dans ce dernier cas si la distribution sur les classes latentes est bursty ou pas. Nous illustrons ces résultats par des expérimentations réalisées sur des réseaux réels et synthétiques.}
 
 \keywords{Hierachical baysian Models, Random Graph, Machine Learning, Social Networks}
 
@@ -136,7 +137,7 @@ L'intérêt de ces propriétés dans l'analyse des réseaux sociaux a été larg
 
 \section{Modèles de prédictions de liens stochastique}
 
-Les modèles \mmm sont des modèles génératifs basés sur des facteurs latents (aussi appelés classe latentes ou caractéristiques latentes) qui représentent les propriétés, a priori, des n\oe{}uds du graphe $G=(V,E)$ associé au réseau social (chaque n\oe{}ud représente un individu). Nous notons la matrice d'adjacence induite $Y=(y_{ij})_{i,j\in V}$ où $y_{ij}=1$ si un lien est observé entre $i$ et $j$ et $y_{ij}=0$ si un non-lien est observé. Nous dénotons $N$ le nombre de n\oe{}uds du graphe ($N=|V|$). Les modèles \mmm sont caractérisés par le fait qu'un n\oe{}ud peut appartenir à plusieurs facteurs latents. Par exemple, cela peut permettre de modéliser le fait qu'un individu puisse appartenir à plusieurs communautés \footnote{Comme mentionné dans \cite{goldenberg2010survey} }. L'appartenance d'un n\oe{}ud $i$ est encodé dans son facteur latent par un vecteur $\mat{f}_i$ de dimension finie $K$ dans les versions standard des modèles, et de dimension potentiellement infinie dans les versions non-paramétriques, et cette dimension devient un paramètre du modèle. La collection des vecteurs $\mat{f}_{i}$ ($1 \le i \le N$) constitue la matrice de caractéristiques latentes $\mat{F}$. De plus, une matrice de poids $\mat{\Phi}$ est utilisée pour encoder les corrélations entre les caractéristiques latentes. Comme nous travaillons sur des réseaux binaires, les observations (liens) ont pour vraisemblance une distribution de Bernoulli.
+Les modèles \mmm sont des modèles génératifs basés sur des facteurs latents (aussi appelés classes latentes ou caractéristiques latentes) qui représentent les propriétés, a priori, des n\oe{}uds du graphe $G=(V,E)$ associé au réseau social (chaque n\oe{}ud représente un individu). Nous notons la matrice d'adjacence induite $Y=(y_{ij})_{i,j\in V}$ où $y_{ij}=1$ si un lien est observé entre $i$ et $j$ et $y_{ij}=0$ si un non-lien est observé. Nous dénotons $N$ le nombre de n\oe{}uds du graphe ($N=|V|$). Les modèles \mmm sont caractérisés par le fait qu'un n\oe{}ud peut appartenir à plusieurs facteurs latents. Par exemple, cela peut permettre de modéliser le fait qu'un individu puisse appartenir à plusieurs communautés \footnote{Comme mentionné dans \cite{goldenberg2010survey} }. L'appartenance d'un n\oe{}ud $i$ est encodé dans son facteur latent par un vecteur $\mat{f}_i$ de dimension finie $K$ dans les versions standard des modèles, et de dimension potentiellement infinie dans les versions non-paramétriques, et cette dimension devient un paramètre du modèle. La collection des vecteurs $\mat{f}_{i}$ ($1 \le i \le N$) constitue la matrice de caractéristiques latentes $\mat{F}$. De plus, une matrice de poids $\mat{\Phi}$ est utilisée pour encoder les corrélations entre les caractéristiques latentes. Comme nous travaillons sur des réseaux binaires, les observations (liens) ont pour vraisemblance une distribution de Bernoulli.
 
 Les modèles de la classe des \mmm diffèrent dans la manière dont les matrices $\mat{F}$ et $\mat{\Phi}$ sont générées. Afin de rester dans un cadre le plus général possible, nous considérons ici les versions non-paramétriques du modèle de caractéristiques latentes \cite{ILFRM}, dénoté \ilfm, et du modèle de composition mixte bloc  \cite{iMMSB,fan2015dynamic}, dénoté \immsb. Cela conduit à un nombre de facteurs latents dynamique qui permet à la dimension du modèle de s'adapter à la complexité des données. En pratique, cela est réalisé par l'utilisation de prior non-paramétrique, le processus de Dirichlet Hiérarchique (HDP) pour \immsb\ et le processus du Buffet Indien (IBP) pour \ilfm.~\\
 
@@ -152,12 +153,12 @@ y_{ij} \sim \mathrm{Bern}(\sigma(\mat{f}_{i} \mat{\Phi} \mat{f}_{j}^\top))
 \end{enumerate}
 %
 
-Où $\top$ représente la transposée et $\sigma$ la fonction sigmoïde permettant de passer d'un ensemble $[-\infty, +\infty]$ vers un ensemble de probabilité $[0,1]$.  $\mat{f}_{i}$ dénote la i-ème ligne de la matrice $F$ comme le vecteur de caractéristiques latent du n\oe{}ud $i$. Finalement, ce modèle définit deux hyper-paramètres, l'un étant le paramètre de concentration $\alpha$ de IPB, et l'autre celui de la variance de la distribution normale des poids $\sigma_w$. \footnote{Dans le cas d'un réseau dirigé, les matrices $\mat{Y}$ et $\mat{\Phi}$ sont symétriques et uniquement leurs parties diagonales supérieures ou inférieures) sont générées}. ~\\
+Où $\top$ représente la transposée et $\sigma$ la fonction sigmoïde permettant de passer d'un ensemble $[-\infty, +\infty]$ vers un ensemble de probabilité $[0,1]$.  $\mat{f}_{i}$ dénote la i-ème ligne de la matrice $F$ comme le vecteur de caractéristiques latent du n\oe{}ud $i$. Finalement, ce modèle définit deux hyper-paramètres, l'un étant le paramètre de concentration $\alpha$ de IPB, et l'autre celui de la variance de la distribution normale des poids $\sigma_w$. \footnote{Dans le cas d'un réseau dirigé, les matrices $\mat{Y}$ et $\mat{\Phi}$ sont symétriques et uniquement leurs parties diagonales supérieures ou inférieures sont générées}. ~\\
 
 
-Le modèle \immsb~ quant à lui, génère les distributions d'appartenance aux classes latentes à partir d'un processus (hiérarchique) de Dirichlet. Après quoi, une appartenance à une classe latente par n\oe{}ud est tirée pour chaque couple de n\oe{}uds. Finalement, la probabilité de connecter deux liens est tirée en fonction du poids encodant la corrélation entre ces deux classes, se résumant au processus génératif suivant :
+Le modèle \immsb~ quant à lui, génère les distributions d'appartenance aux classes latentes à partir d'un processus (hiérarchique) de Dirichlet. Après quoi, une appartenance à une classe latente par n\oe{}ud est tirée pour chaque couple de n\oe{}uds. Finalement, la probabilité de connecter deux n\oe{}uds est tirée en fonction du poids encodant la corrélation entre leurs classes respectives, se résumant au processus génératif suivant :
 \begin{enumerate}
-\item Génération des distributions des classes d'appartenances $\mat{F}_{N \times \infty}$:
+\item Génération des distributions des classes d'appartenance $\mat{F}_{N \times \infty}$:
    \begin{align}
        \bm{\beta} &\sim \gem(\gamma) \nonumber \\
     \mat{f}_i &\sim \DP(\alpha_0, \beta) \quad\text{ for }  i \in \{1, .., N\} \nonumber
@@ -175,22 +176,22 @@ Le modèle \immsb~ quant à lui, génère les distributions d'appartenance aux c
 
 Ce modèle contient quatre hyper-paramètres, $(\gamma, \alpha_0)$ pour le HDP et $(\lambda_0, \lambda_1)$ pour la distribution des poids. \footnote{La remarque précèdente concernant les réseaux dirigés s'applique ici aussi.}
 
-Dans l'usage classique des modèles décrits pour la prédiction de liens, des observations (liens) sont disponibles et sont utilisées pour estimer  $\mat{F}$ et $\mat{\Phi}$, à partir desquels de nouveaux liens peuvent être prédits. Dans la suite de ce papier, nous dénoterons par $\mat{\hat{F}}$ et $\mat{\hat{\Phi}}$ les estimations (ie paramètres inférés) de $\mat{F}$ et $\mat{\Phi}$, qui peuvent être obtenues à partir d'algorithmes d'inférence approximés tels que le (collapsed) Gibbs sampling et Metropolis-Hastings ou encore à l'aide d'inférence variationnelle Nous ne les détaillons pas ici et renvoyons le lecteur intéressé à \cite{ILFRM,IBP,HDP,fan2015dynamic}.
+Dans l'usage classique des modèles décrits pour la prédiction de liens, des observations (liens) sont disponibles et sont utilisées pour estimer  $\mat{F}$ et $\mat{\Phi}$, à partir desquels de nouveaux liens peuvent être prédits. Dans la suite de ce papier, nous dénoterons par $\mat{\hat{F}}$ et $\mat{\hat{\Phi}}$ les estimations (ie paramètres inférés) de $\mat{F}$ et $\mat{\Phi}$, qui peuvent être obtenues à partir d'algorithmes d'inférence approximés tels que le (collapsed) Gibbs sampling et Metropolis-Hastings ou encore à l'aide d'inférence variationnelle. Nous ne les détaillons pas ici et renvoyons le lecteur intéressé à \cite{ILFRM,IBP,HDP,fan2015dynamic}.
 
 Nous dénoterons aussi $\mathcal{M}_e$ la version des deux modèles \ilfm\ and \immsb\ dans lesquels $\mat{F}$ and $\mat{\Phi}$ sont assumés connus et fixés à $\mat{\hat{F}}$ et  $\mat{\hat{\Phi}}$.
 
-La section suivante est consacrée à l'analyse  de ces propriétés pour les modèles \mmm, à savoir, a partir des paramètres appris $\mat{\hat{F}}$ and $\mat{\hat{\Phi}}$.
+La section suivante est consacrée à l'analyse  de ces propriétés pour les modèles \mmm, à savoir, à partir des paramètres appris $\mat{\hat{F}}$ and $\mat{\hat{\Phi}}$.
 
 
 \section{Homophilie: \emph{"Birds of a feather flock together"}}
 \label{sec:homophily}
 
-L'homophilie réfère à la tendance des individus à se connecter à d'autres avec qui ils partagent certaines caractéristiques telles que un statut, des préférences ou intérêts\cite{mcpherson2001birds,lazarsfeld1954friendship}.   Une notion proche est celle d'\emph{assortativité}, qui est plus générale et s'applique à tous types de réseaux, pas seulement sociaux, et qui renvoit à la tendance à se connecter à des individus similaires.
+L'homophilie réfère à la tendance des individus à se connecter à d'autres avec qui ils partagent certaines caractéristiques telles que un statut, des préférences ou intérêts \cite{mcpherson2001birds,lazarsfeld1954friendship}.   Une notion proche est celle d'\emph{assortativité}, qui est plus générale et s'applique à tous types de réseaux, pas seulement sociaux, et qui renvoit à la tendance à se connecter à des individus similaires.
 
 
 Une définition de l'homophilie a été proposée par \cite{la2010randomization}. Cependant, cette définition considère une seule caractéristique (ie l'âge ou le genre), et ne peut donc pas s'appliquer dans le cadre de modèles \mmm. Nous proposons donc de définir l'homophile comme suit : 
 \begin{definition}[Homophilie] \label{def:homophily}
-    Suppose $\mathcal{M}_e$ est un modèle de prédiction de liens et $s$ une mesure de similarité entre n\oe{}uds. Nous disons que $\mathcal{M}_e$ est homophilique avec une similarité $s$ ssi, $\forall (i,j,i',j') \in V^4$:
+    Soit $\mathcal{M}_e$  un modèle de prédiction de liens et $s$ une mesure de similarité entre n\oe{}uds. Nous disons que $\mathcal{M}_e$ est homophilique avec une similarité $s$ ssi, $\forall (i,j,i',j') \in V^4$:
 \begin{equation}
 s(i,j) > s(i',j')  \implies \pr(y_{ij}=1 \mid \mathcal{M}_e) > \pr(y_{i'j'}=1  \mid \mathcal{M}_e) \nonumber
 \end{equation}
@@ -199,7 +200,7 @@ s(i,j) > s(i',j')  \implies \pr(y_{ij}=1 \mid \mathcal{M}_e) > \pr(y_{i'j'}=1  \
 
 \noindent Cette définition capture directement l'effet \emph{"plus deux n\oe{}uds sont similaires, plus ils ont une chance de se connecter"}. 
 
-Différentes similarités peuvent être considérées, tant qu'elles sont basées sur la mesure des propriétés des n\oe{}uds considérés. Dans les modèles \mmm, ces propriétés ne sont pas directement observées, et sont encodées dans les caractéristique latentes. D'après les paramètres des modèles, nous défissons la notion de similarité naturelle comme étant $s_n(i,j) = \mat{\hat{f}}_{i} \mat{\hat{\Phi}} \mat{\hat{f}}_j^\top$.
+Différentes similarités peuvent être considérées, tant qu'elles sont basées sur la mesure des propriétés des n\oe{}uds considérés.  Dans les modèles \mmm, ces propriétés ne sont pas directement observées, et sont encodées dans les caractéristique latentes. D'après les paramètres des modèles, nous défissons la notion de similarité naturelle comme étant $s_n(i,j) = \mat{\hat{f}}_{i} \mat{\hat{\Phi}} \mat{\hat{f}}_j^\top$.
 
 
 On peut voir que \ilfm~  et \immsb, dans le contexte $\mathcal{M}_e$ sont homophiliques avec le respect de $s_n$. En effet, $\pr(y_{ij}=1 \mid \mathcal{M}_e)$ augmente avec $s_n$  pour  \ilfm\ comme la fonction sigmoïde est strictement croissante. De plus, en marginalisant sur les paramètres $z$ dans \immsb\ on a :
@@ -209,13 +210,13 @@ On peut voir que \ilfm~  et \immsb, dans le contexte $\mathcal{M}_e$ sont homoph
 \end{align}
 
 
-Nous définissons une seconde similarité, uniquement dépendante des caractéristiques latentes et où la matrice des poids est abandonnée, par $s_l(i,j) = \mat{\hat{f}}_{i} \mat{\hat{f}}_j^\top$. Avec cette similarité, ni \ilfm~ ni \immsb~ sont homophiliques. En effet, supposons que $\mat{\hat{\Phi}}$ est presque nul sur la diagonale, et strictement positive par ailleurs (ce qui est possible pour les deux modèles). Pour \immsb~ on a :
+Nous définissons une seconde similarité, uniquement dépendante des caractéristiques latentes et où la matrice des poids est abandonnée, par $s_l(i,j) = \mat{\hat{f}}_{i} \mat{\hat{f}}_j^\top$. Avec cette similarité, ni \ilfm~ ni \immsb~ sont homophiliques. En effet, supposons que $\mat{\hat{\Phi}}$ est presque nulle sur la diagonale, et strictement positive par ailleurs (ce qui est possible pour les deux modèles). Pour \immsb~ on a :
 \begin{align*} 
 \pr(y_{ij}=1 \mid \M_e) & = \sum_{k' \neq k} \hat{f}_{ik} \hat{\phi}_{kk'} \hat{f}_{jk'}
 \end{align*}
 
 
-comme $\hat{\phi}_{kk} = 0$.  Supposons à présent que : $\mat{\hat{f}}_i=\mat{\hat{f}}_j=(0,1,0)$ et $\mat{\hat{f}}_{i'}=(0.5,0,0.5)$ et $\mat{\hat{f}}_{j'}=(0,1,0)$, alors, $s_l(i,j)=1$ et $s_l(i',j')=0$. Ainsi $\pr(y_{ij}=1 \mid \M_e) = 0$ alors que $\pr(y_{i'j'}=1 \mid \M_e) > 0$. Donc \immsb~ n'est pas homophilique avec $s_l$. De la même manière, en remplaçant $\mat{\hat{f}}_{i'}=(0.5,0,0. 5)$ par $\mat{\hat{f}}_{i'}=(1,0,1)$, on voit que \ilfm~ n'est pas homophilique non plus avec $s_l$.
+Comme $\hat{\phi}_{kk} = 0$.  Supposons à présent que : $\mat{\hat{f}}_i=\mat{\hat{f}}_j=(0,1,0)$ et $\mat{\hat{f}}_{i'}=(0.5,0,0.5)$ et $\mat{\hat{f}}_{j'}=(0,1,0)$, alors, $s_l(i,j)=1$ et $s_l(i',j')=0$. Ainsi $\pr(y_{ij}=1 \mid \M_e) = 0$ alors que $\pr(y_{i'j'}=1 \mid \M_e) > 0$. Donc \immsb~ n'est pas homophilique avec $s_l$. De la même manière, en remplaçant $\mat{\hat{f}}_{i'}=(0.5,0,0. 5)$ par $\mat{\hat{f}}_{i'}=(1,0,1)$, on voit que \ilfm~ n'est pas homophilique non plus avec $s_l$.
 
 Cela montre que, pour qu'un modèle soit homophilique, il doit être conçu en fonction de la similarité à la base de la proximité entre individus. \ilfm~ et \immsb~ ont été conçus sur la base de la similarité naturelle qui constitue le paramètre de la distribution de Bernoulli sur les liens. Il est donc trivialement vrai que les modèles soient homophiliques avec $s_n$. Il est néanmoins possible de rendre les modèles homophiliques avec $s_l$ en adaptant le prior sur la matrice $\mat{\Phi}$; par exemple, une matrice de poids diagonale avec des poids constants conduira à des modèles homophiliques. Dans ce cas, les caractéristiques latentes peuvent être interprétées comme des communautés. C'est ce qui est réalisé dans les travaux de \cite{AMMSB} afin de détecter des communautés recouvrantes dans des réseaux sociaux.
 
@@ -223,13 +224,13 @@ Cela montre que, pour qu'un modèle soit homophilique, il doit être conçu en f
 \label{sec:burstiness}
 
 
-L'attachement préférentiel est une propriété d'un réseau selon laquelle la probabilité qu'un n\oe{}ud crée un lien avec un autre augmente avec le nombre de liens déja établis par ce dernier (son degré). Cette propriété est lié à un phénomène plus général appelé \textit{burstiness} \footnote{A.L. Barab\'asi, par exemple, utilise ce terme \textit{attachement préférentiel} in \cite{barabasi1999emergence}, et \textit{burstiness} dans \cite{barabasi_burst}.} qui décrit le fait que certains évènements apparaissent en "rafale", c'est à dire qu'une fois qu'ils apparaissent ils ont plus de chance d'apparaître encore. La burstiness a été étudiée dans différents domaines, notamment en traitement automatique du langage et en recherche d'information afin de caractériser l'occurrence des mots \cite{church1995poisson}. Des définitions simples du burstiness ont été proposées \cite{clinchant2008bnb,clinchant2010information}, pour les distributions continues et discrètes, qui capturent le fait que la probabilité de nouvelles occurrences d'un évènement augmente avec le nombre d'occurrences de cet évènement. Nous adaptons ici ces définitions pour l'attachement préférentiel dans les réseaux. De plus, le phénomène peut apparaître à différent niveaux du réseaux : (a) l'attachement préférentiel global traite du degré sur l'ensemble des n\oe{}uds et (b) l'attachement préférentiel local traite le degré au sein d'une classe :
+L'attachement préférentiel est une propriété d'un réseau selon laquelle la probabilité qu'un n\oe{}ud crée un lien avec un autre augmente avec le nombre de liens déjà établis par ce dernier (son degré). Cette propriété est liée à un phénomène plus général appelé \textit{burstiness} \footnote{A.L. Barab\'asi, par exemple, utilise ce terme \textit{attachement préférentiel} in \cite{barabasi1999emergence}, et \textit{burstiness} dans \cite{barabasi_burst}.} qui décrit le fait que certains évènements apparaissent en "rafale", c'est à dire qu'une fois qu'ils apparaissent ils ont plus de chance d'apparaître encore. La burstiness a été étudiée dans différents domaines, notamment en traitement automatique du langage et en recherche d'information afin de caractériser l'occurrence des mots \cite{church1995poisson}. Des définitions simples du burstiness ont été proposées \cite{clinchant2008bnb,clinchant2010information}, pour les distributions continues et discrètes, qui capturent le fait que la probabilité de nouvelles occurrences d'un évènement augmente avec le nombre d'occurrences de cet évènement. Nous adaptons ici ces définitions pour l'attachement préférentiel dans les réseaux. De plus, le phénomène peut apparaître à différent niveaux du réseau : (a) l'attachement préférentiel global traite du degré sur l'ensemble des n\oe{}uds et (b) l'attachement préférentiel local traite le degré au sein d'une classe :
 
 
 \begin{definition}[Attachement préférentiel]
 Soit $i$ un n\oe{}ud dans un réseau social et soit $d_i$ son degré.
 \begin{description}
-    \item[(1)] \emph{Attachement préférentiel global}: on dit que le modèle de prédiction de liens $\mathcal{M}_e$ satisfait l'attachement préférentiel global ssi, pour chaque n\oe{}ud $i$, $\pr(d_i \ge n+1 \mid d_i \ge n, \mathcal{M}_e)$ augmente avec $n n \in {0, N-1}$;
+    \item[(1)] \emph{Attachement préférentiel global}: on dit que le modèle de prédiction de liens $\mathcal{M}_e$ satisfait l'attachement préférentiel global ssi, pour chaque n\oe{}ud $i$, $\pr(d_i \ge n+1 \mid d_i \ge n, \mathcal{M}_e)$ augmente avec $n \in \{0, N-1\}$;
  \item[(2)] \emph{Attachement préférentiel local}: On dit que le modèle de prédiction de liens  $\mathcal{M}_e$ satisfait l'attachement préférentiel local ssi, pour chaque n\oe{}ud $i$ muni de son degré local $d_{i,k}$  au sein de la classe $k$, $\forall \epsilon \in [0,1], \, \pr(d_{i,k} \ge x+\epsilon \mid d_{i,k} \ge x, \mathcal{M}_e)$  augmente avec $x \in [0,N-1]$. De plus , $d_{i,k}$ est défini comme l'espérance du degré de $i$ au sein de la classe $k$.
 \end{description}
 \label{def:burst-soc-net}
@@ -252,7 +253,7 @@ Où $\mathcal{V}(i)$ désigne l'ensemble des n\oe{}uds connectés à $i$. Soit $
 0 \le \pr(d_{i} \ge n+1 \mid d_{i} \ge n, \mathcal{M}_e) \le (1 - c^{N-1-n})
 \]
 
-Comme $c < 1$ et, $1- C^{N-1-n}$ décroit est vaut zéros pour $n=N-1$. Nous avons donc la propriété suivante:
+Comme $c < 1$ et, $1- C^{N-1-n}$ décroit est vaut zéro pour $n=N-1$. Nous avons donc la propriété suivante:
 
 \begin{proposition}[]
 \label{pref-attch-glob}
@@ -278,10 +279,10 @@ Pour \ilfm, posons $C_{i,k} = |\{j \in V, \hat{f}_{jk} = \hat{f}_{ik} = 1\}|$. C
 d_{i,k} = \sum_{j\in V} \sigma(\hat{f}_{ik} \hat{\Phi}_{kk} \hat{f}_{jk}) =  C_{i,k} (\sigma(\hat{\Phi}_{kk})-0.5) + \frac{N}{2}
 \]
 
-Comme $\hat{f}_{ik}$  est binaire, il n'y a pas d'effet de  renforcement positif: $C_{i,k}$n'augmente pas si $\hat{f}_{ik}=1$, donc \ilfm\ ne satisfait  pas l'attachement préférentiel global. \hspace{4.69cm} $\Box$
+Comme $\hat{f}_{ik}$  est binaire, il n'y a pas d'effet de  renforcement positif: $C_{i,k}$ n'augmente pas si $\hat{f}_{ik}=1$, donc \ilfm\ ne satisfait  pas l'attachement préférentiel global. \hfill $\Box$
 
 Les propositions de cette section montrent que les deux modèles sont déficients dans le sens où ils ne garantissent pas que les réseaux qu'ils génèrent satisfont l'attachement préférentiel global (et local dans le cas d'\ilfm). Ces résultats peuvent fournir une explication face aux performances des modèles (sur la prédiction de liens) en fonction des propriétés présentes (ou pas) dans les réseaux sociaux observés. 
-La prochaine section est dédiée à vérifier expérimentalement les conséquences de ces propriétés sur la prédictions de liens.
+La prochaine section est dédiée à vérifier expérimentalement les conséquences de ces propriétés sur la prédiction de liens.
 
 \section{Illustration}
 \label{sec:exps}
@@ -291,7 +292,7 @@ Afin d'illustrer nos résultats théoriques, nous évaluons la performance préd
 \input{table/net_measures}
 
 La figure 1 présente pour chacun de ces réseaux la matrice d'adjacence et la distribution de degrés (globale). Nous avons mesuré l'attachement préférentiel global et local à l'aide de tests statistiques de qualité d'ajustement. La procédure consiste à évaluer la qualité des distributions des degrés (global et local) par rapport à une loi de puissance, qui est le modèle de référence pour ce type de distribution. Cette mesure fournit une $p$-value par distribution comprise entre 0 et 1. La variable $\alpha$ représente le paramètre de la loi de puissance. Une valeur élevée de la $p$-value tend à confirmer l'hypothèse (loi de puissance), et une faible valeur à rejeter l'hypothèse. La procédure complète est décrite dans \cite{clauset2009power}.
-Nous avons utilisé cette même mesure pour évaluer la qualité des distribution générées par les modèles \immsb~ et \ilfm.
+Nous avons utilisé cette même mesure pour évaluer la qualité des distributions générées par les modèles \immsb~ et \ilfm.
 
 
 \begin{figure}[h] {Matrices d'adjacence (gauche) et distribution des degrés (droite) pour les 4 jeux. (les liens sont noirs et les non-liens blancs.)}
@@ -312,7 +313,7 @@ Nous avons utilisé cette même mesure pour évaluer la qualité des distributio
 \end{figure}
 
 
-Pour chacun des jeux de données, nous avons inféré les paramètres des modèles \immsb~ et \ilfm  via des algorithmes de Markov Chain Monte Carlo (MCMC) sur 200 itérations. Pour \immsb, le paramètre de concentration du HDP a été optimisé en utilisant des priors gamma tel que $\alpha_0 \sim \text{Gamma}(1,1)$ et $\gamma \sim \text{Gamma}(1,1)$ en suivant la procédure de \cite{HDP}. Les paramètres de la matrice de poids $\lambda_0$ et $\lambda_1$ sont fixés à 0.1. Pour \ilfm, le paramètre $\sigma_w$ est fixé à 1 et le paramètre de concentration $\alpha$ de l'IBP fixé à 0.5 pour avoir une dynamique des classes comparable avec \immsb. Pour évaluer les distributions de degrés de ces modèles, nous générons un réseau complet (liens et non-liens) pour chaque n\oe{}ud du réseau source. Cette procédure est répétée 10 fois pour chaque expérience. Les valeurs des expériences pour la mesure des degrés des modèles  sont les moyennes et variances pour 10 répétitions indépendantes, présentées dans la Table \ref{table:me_gofit}. 
+Pour chacun des jeux de données, nous avons inféré les paramètres des modèles \immsb~ et \ilfm~  via des algorithmes de Markov Chain Monte Carlo (MCMC) sur 200 itérations. Pour \immsb, le paramètre de concentration du HDP a été optimisé en utilisant des priors gamma tel que $\alpha_0 \sim \text{Gamma}(1,1)$ et $\gamma \sim \text{Gamma}(1,1)$ en suivant la procédure de \cite{HDP}. Les paramètres de la matrice de poids $\lambda_0$ et $\lambda_1$ sont fixés à 0.1. Pour \ilfm, le paramètre $\sigma_w$ est fixé à 1 et le paramètre de concentration $\alpha$ de l'IBP fixé à 0.5 pour avoir une dynamique des classes comparable avec \immsb. Pour évaluer les distributions de degrés de ces modèles, nous générons un réseau complet (liens et non-liens) pour chaque n\oe{}ud du réseau source. Cette procédure est répétée 10 fois pour chaque expérience. Les valeurs des expériences pour la mesure des degrés des modèles  sont les moyennes et variances pour 10 répétitions indépendantes, présentées dans la Table \ref{table:me_gofit}. 
 Il apparait que pour les modèles, l'attachement préférentiel global est uniquement vérifié sur les réseaux où la propriété était présente (Netwrok1 et Blogs) mais pas sur les autres, ce qui est en accord avec la proposition 3. Par ailleurs, dans le cas local, \immsb~ satisfait le test sur tous les réseaux avec de faibles fluctuations ce qui n'est pas le cas pour \ilfm~ pour qui les fluctuations sont plus grandes et surtout les paramètres de la loi de puissance sont très faibles. Ces faits confirment notre proposition 4.
 
 
