--- a/JASA/a.bib
+++ b/JASA/a.bib
@@ -151,6 +151,7 @@
   pages={48--53},
   year={2008}
 }
+@article{dimmsb, crossref = {fan2015dynamic} }
 @article{fan2015dynamic,
     author    = {Xuhui Fan and Longbing Cao and Richard Yi Da Xu},
     title     = {Dynamic Infinite Mixed-Membership Stochastic Blockmodel},
@@ -200,15 +201,16 @@ publisher={JSTOR}
     bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 
-%%% From Christine pp.
+
 @inproceedings{LeskovecBKT08,
-  title={Microscopic evolution of social networks},
-  author={Leskovec, Jure and Backstrom, Lars and Kumar, Ravi and Tomkins, Andrew},
-  booktitle={Proceedings of the 14th ACM SIGKDD International Conference on Knowledge discovery and data mining},
-  pages={462--470},
-  year={2008},
-  organization={ACM}
-}
+    author = {Leskovec, Jure and Backstrom, Lars and Kumar, Ravi and Tomkins, Andrew},
+    title = {Microscopic Evolution of Social Networks},
+    booktitle = {Proceedings of the 14th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+    series = {KDD '08},
+    year = {2008},
+    pages = {462--470},
+    publisher = {ACM},
+} 
 @proceedings{DBLP:conf/kdd/2008,
   editor    = {Ying Li and
                Bing Liu and
@@ -324,20 +326,23 @@ publisher={JSTOR}
   pages={163--190},
   year={1995},
 }
-@incollection{clinchant2008bnb,
-  title={The {BNB} distribution for text modeling},
-  author={Clinchant, St{\'e}phane and Gaussier, Eric},
-  booktitle={Advances in Information Retrieval},
-  pages={150--161},
-  year={2008},
+
+@inproceedings{clinchant2008bnb,
+    title={the bnb distribution for text modeling},
+    author={clinchant, st{\'e}phane and gaussier, eric},
+    booktitle={european conference on information retrieval},
+    pages={150--161},
+    year={2008},
+    organization={springer}
 }
+
 @inproceedings{clinchant2010information,
-  title={Information-based models for ad hoc {IR}},
-  author={Clinchant, St{\'e}phane and Gaussier, Eric},
-  booktitle={Proceedings of the 33rd international ACM SIGIR conference on Research and development in information retrieval},
-  pages={234--241},
-  year={2010},
-}
+    author = {Clinchant, St{\'e}phane and Gaussier, Eric},
+    title = {Information-based Models for Ad Hoc IR},
+    booktitle = {Proceedings of the 33rd International ACM SIGIR Conference on Research and Development in Information Retrieval},
+    year = {2010},
+    pages = {234--241},
+} 
 
 @article{AMMSB, crossref = {gopalan2013efficient} }
 @article{gopalan2013efficient,
@@ -376,7 +381,7 @@ publisher={JSTOR}
 @BOOK{barabasi_burst,
 	AUTHOR = "A.-L. Barab\'asi",
 	TITLE = "Bursts: The Hidden Patterns Behind Everything We Do, from Your E-mail to Bloody Crusades",
-	PUBLISHER = "{PLUME}, Penguin Book, USA",
+	PUBLISHER = "{Plume}, Penguin Book, USA",
 	YEAR = "2011"
 }
 @article{cohen2003scale,
@@ -399,7 +404,7 @@ publisher={JSTOR}
 @article{orbanz2015bayesian,
     title={Bayesian models of graphs, arrays and other exchangeable random structures},
     author={Orbanz, Peter and Roy, Daniel M},
-    journal={IEEE transactions on pattern analysis and machine intelligence},
+    journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
     volume={37},
     number={2},
     pages={437--461},
@@ -572,12 +577,4 @@ publisher={JSTOR}
   author={Orbanz, Peter},
   year={2009},
   institution={Technical report, Univ. Cambridge}
-}
-@inproceedings{clinchant2010information,
-    title={Information-based models for ad hoc IR},
-    author={Clinchant, St{\'e}phane and Gaussier, Eric},
-    booktitle={Proceedings of the 33rd international ACM SIGIR conference on Research and development in information retrieval},
-    pages={234--241},
-    year={2010},
-    organization={ACM}
 }
